--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2.5rem;
     margin-top: 50px;
-    color: #333;
+    color: #007bff;
 }
 
 .hero-section {
