--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .navbar-brand {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.5rem;
-    color: #006eff !important;
+    color: #006eff ;
 }
 
 .title {
